# Kaggle_competition_NBA_league

./: README.md  pyproject.toml  setup.py
data/processed/: X_test.csv  X_val.csv  y_test.csv  y_train.csv  y_val.csv
docs/: conf.py
models/: LICENSE  model1.py  ohe.joblib  ohe_test_conf.joblib  replace_values_func.py  scaler.joblib
notebooks/: Mohammadi_Yasaman-24612626-week1_PolynominalLogisticRegression.ipynb  Mohammadi_Yasaman-24612626-week2_XGBOOST.ipynb  Mohammadi_Yasaman-24612626-week3_XGBOOST-2.ipynb  Mohammadi_Yasaman_24612626_week1_PolynominalLogisticRegression.ipynb
reports/figures/: Basketball dashboard.twb
src/custom modules (function)/: check_dataframe_column_count.py  extract_numerical.py  fill_missing_with_mode.py  fill_missing_with_zero.py  find_non_common_columns.py
src/models/: XGBOOST.py  XGBOOST2.py  polynominal.py
